--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="wrapper">
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Welcome to EatSmartApp Challenge</h1>
 </div>
