--- a/Views/Jokes/Details.cshtml
+++ b/Views/Jokes/Details.cshtml
@@ -8,35 +8,34 @@
     ViewData["Title"] = "Details";
 }
 
-<div class="wrapper">
+<h1>Details Joke</h1>
 
-    <h1>Details</h1>
+<div>
+    <h4>Joke</h4>
 
-    <div>
-        <h4>Joke</h4>
-        <hr />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Questions)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Questions)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Answer)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Answer)
-            </dd>
-        </dl>
-    </div>
+    <hr />
 
-    <div class="options details-options">
-        @if (SignInManager.IsSignedIn(User))
-          {
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
-          }
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-    </div>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Questions)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Questions)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Answer)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Answer)
+        </dd>
+    </dl>
+</div>
 
+<div class="options details-options">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
+    }
+    
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
