--- a/Views/Jokes/Edit.cshtml
+++ b/Views/Jokes/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="wrapper">
 
-    <h1>Edit</h1>
+    <h1>Edit Joke</h1>
 
     <hr />
     <div class="row">
@@ -25,7 +25,7 @@
                     <span asp-validation-for="Answer" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Save" class="btn btn-primary btn-max" />
                 </div>
             </form>
         </div>
