--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,22 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+#registerSubmit {
+    width: 100%;
+    margin-top: 1rem;
+}
+
+#login-submit {
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.btn-max {
+  width: 100%;
+  margin-top: 1rem;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -86,4 +102,8 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.checkbox {
+  margin-top: 1rem;
 }
